table-holder component was created, horizontal scroll was added to the tables, tables settings were refactored

--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -911,181 +911,183 @@
               <div class="catalog__content-item tabs__content js-tab-content" data-content="services">
                 <div class="settings-services">
                   <div class="settings-services__table">
-                    <table class="table">
-                      <thead>
-                        <tr>
-                          <th>
-                            <h4>Services:</h4>
-                          </th>
-                          <th>
-                            <h4>Language pair:</h4>
-                          </th>
-                          <th>
-                            <h4>Matt:</h4>
-                          </th>
-                          <th>
-                            <h4>Unit:</h4>
-                          </th>
-                          <th>
-                            <h4>Rate:</h4>
-                          </th>
-                          <th>
-                            <h4>+ fee / -%</h4>
-                          </th>
-                          <th>
-                            <h4>Repetitions:</h4>
-                          </th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td>
-                            <div class="icon-title">
-                              <div class="icon-title__icon"><img src="images/icons/translation.svg" alt="interpreting"></div>
-                              <div class="icon-title__title">
-                                <p>Translation</p>
+                    <div class="table-holder">
+                      <table class="table">
+                        <thead>
+                          <tr>
+                            <th>
+                              <h4>Services:</h4>
+                            </th>
+                            <th>
+                              <h4>Language pair:</h4>
+                            </th>
+                            <th>
+                              <h4>Matt:</h4>
+                            </th>
+                            <th>
+                              <h4>Unit:</h4>
+                            </th>
+                            <th>
+                              <h4>Rate:</h4>
+                            </th>
+                            <th>
+                              <h4>+ fee / -%</h4>
+                            </th>
+                            <th>
+                              <h4>Repetitions:</h4>
+                            </th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>
+                              <div class="icon-title">
+                                <div class="icon-title__icon"><img src="images/icons/translation.svg" alt="interpreting"></div>
+                                <div class="icon-title__title">
+                                  <p>Translation</p>
+                                </div>
                               </div>
-                            </div>
-                          </td>
-                          <td>
-                            <p>EN- LT, LT-EN</p>
-                          </td>
-                          <td>
-                            <p>C. W. S</p>
-                          </td>
-                          <td>
-                            <p>1 = 1700</p>
-                          </td>
-                          <td>
-                            <p>9.21 EUR</p>
-                          </td>
-                          <td>
-                            <div class="row-group row-group--sm row-group--align-center">
-                              <div class="row-group__item">
-                                <p class="text-silver-chalice">Urgent (<span class="text-surfie-green">+15%</span>)</p>
+                            </td>
+                            <td>
+                              <p>EN- LT, LT-EN</p>
+                            </td>
+                            <td>
+                              <p>C. W. S</p>
+                            </td>
+                            <td>
+                              <p>1 = 1700</p>
+                            </td>
+                            <td>
+                              <p>9.21 EUR</p>
+                            </td>
+                            <td>
+                              <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                                <div class="row-group__item">
+                                  <p class="text-silver-chalice">Urgent (<span class="text-surfie-green">+15%</span>)</p>
+                                </div>
+                                <div class="row-group__item">
+                                  <button class="button button--bg-white button--size-20 button--shadowed" type="button">
+                                    <svg class="svg-icon svg-icon--surfie-green" width="15" height="9">
+                                      <use href="images/svg/svg-sprite/symbol/sprite.svg#eye" x="0" y="0"></use>
+                                    </svg>
+                                  </button>
+                                </div>
                               </div>
-                              <div class="row-group__item">
-                                <button class="button button--bg-white button--size-30 button--shadowed" type="button">
-                                  <svg class="svg-icon svg-icon--surfie-green" width="15" height="9">
-                                    <use href="images/svg/svg-sprite/symbol/sprite.svg#eye" x="0" y="0"></use>
-                                  </svg>
-                                </button>
+                            </td>
+                            <td>
+                              <div class="row-group row-group--sm row-group--nowrap row-group--align-center">
+                                <div class="row-group__item">
+                                  <p class="text-silver-chalice">Rep (<span class="text-brick-red">-30%</span>)</p>
+                                </div>
+                                <div class="row-group__item">
+                                  <button class="button button--bg-white button--size-20 button--shadowed" type="button">
+                                    <svg class="svg-icon svg-icon--surfie-green" width="15" height="9">
+                                      <use href="images/svg/svg-sprite/symbol/sprite.svg#eye" x="0" y="0"></use>
+                                    </svg>
+                                  </button>
+                                </div>
                               </div>
-                            </div>
-                          </td>
-                          <td>
-                            <div class="row-group row-group--sm row-group--align-center">
-                              <div class="row-group__item">
-                                <p class="text-silver-chalice">Rep (<span class="text-brick-red">-30%</span>)</p>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <div class="icon-title">
+                                <div class="icon-title__icon"><img src="images/icons/proofreading.svg" alt="interpreting"></div>
+                                <div class="icon-title__title">
+                                  <p>Proofreading</p>
+                                </div>
                               </div>
-                              <div class="row-group__item">
-                                <button class="button button--bg-white button--size-30 button--shadowed" type="button">
-                                  <svg class="svg-icon svg-icon--surfie-green" width="15" height="9">
-                                    <use href="images/svg/svg-sprite/symbol/sprite.svg#eye" x="0" y="0"></use>
-                                  </svg>
-                                </button>
+                            </td>
+                            <td>
+                              <p>EN- LT, LT-EN</p>
+                            </td>
+                            <td>
+                              <p>C. W. S</p>
+                            </td>
+                            <td>
+                              <p>1 = 1700</p>
+                            </td>
+                            <td>
+                              <p>9.21 EUR</p>
+                            </td>
+                            <td></td>
+                            <td></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <div class="icon-title">
+                                <div class="icon-title__icon"><img src="images/icons/additional.svg" alt="interpreting"></div>
+                                <div class="icon-title__title">
+                                  <p>Additional task</p>
+                                </div>
                               </div>
-                            </div>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <div class="icon-title">
-                              <div class="icon-title__icon"><img src="images/icons/proofreading.svg" alt="interpreting"></div>
-                              <div class="icon-title__title">
-                                <p>Proofreading</p>
+                            </td>
+                            <td>
+                              <p>--</p>
+                            </td>
+                            <td>
+                              <p>Hour</p>
+                            </td>
+                            <td>
+                              <p>1 = 1</p>
+                            </td>
+                            <td>
+                              <p>30 EUR</p>
+                            </td>
+                            <td></td>
+                            <td></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <div class="icon-title">
+                                <div class="icon-title__icon"><img src="images/icons/interpreting.svg" alt="interpreting"></div>
+                                <div class="icon-title__title">
+                                  <p>Interpreting - Constative</p>
+                                </div>
                               </div>
-                            </div>
-                          </td>
-                          <td>
-                            <p>EN- LT, LT-EN</p>
-                          </td>
-                          <td>
-                            <p>C. W. S</p>
-                          </td>
-                          <td>
-                            <p>1 = 1700</p>
-                          </td>
-                          <td>
-                            <p>9.21 EUR</p>
-                          </td>
-                          <td></td>
-                          <td></td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <div class="icon-title">
-                              <div class="icon-title__icon"><img src="images/icons/additional.svg" alt="interpreting"></div>
-                              <div class="icon-title__title">
-                                <p>Additional task</p>
+                            </td>
+                            <td>
+                              <p>EN-LT</p>
+                            </td>
+                            <td>
+                              <p>Hour</p>
+                            </td>
+                            <td>
+                              <p>1 = 1</p>
+                            </td>
+                            <td>
+                              <p>30 EUR</p>
+                            </td>
+                            <td></td>
+                            <td></td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <div class="icon-title">
+                                <div class="icon-title__icon"><img src="images/icons/transcription.svg" alt="interpreting"></div>
+                                <div class="icon-title__title">
+                                  <p>Transcribing</p>
+                                </div>
                               </div>
-                            </div>
-                          </td>
-                          <td>
-                            <p>--</p>
-                          </td>
-                          <td>
-                            <p>Hour</p>
-                          </td>
-                          <td>
-                            <p>1 = 1</p>
-                          </td>
-                          <td>
-                            <p>30 EUR</p>
-                          </td>
-                          <td></td>
-                          <td></td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <div class="icon-title">
-                              <div class="icon-title__icon"><img src="images/icons/interpreting.svg" alt="interpreting"></div>
-                              <div class="icon-title__title">
-                                <p>Interpreting - Constative</p>
-                              </div>
-                            </div>
-                          </td>
-                          <td>
-                            <p>EN-LT</p>
-                          </td>
-                          <td>
-                            <p>Hour</p>
-                          </td>
-                          <td>
-                            <p>1 = 1</p>
-                          </td>
-                          <td>
-                            <p>30 EUR</p>
-                          </td>
-                          <td></td>
-                          <td></td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <div class="icon-title">
-                              <div class="icon-title__icon"><img src="images/icons/transcription.svg" alt="interpreting"></div>
-                              <div class="icon-title__title">
-                                <p>Transcribing</p>
-                              </div>
-                            </div>
-                          </td>
-                          <td>
-                            <p>EN-LT</p>
-                          </td>
-                          <td>
-                            <p>Min</p>
-                          </td>
-                          <td>
-                            <p>1 = 1</p>
-                          </td>
-                          <td>
-                            <p>9.21 EUR</p>
-                          </td>
-                          <td></td>
-                          <td></td>
-                        </tr>
-                      </tbody>
-                    </table>
+                            </td>
+                            <td>
+                              <p>EN-LT</p>
+                            </td>
+                            <td>
+                              <p>Min</p>
+                            </td>
+                            <td>
+                              <p>1 = 1</p>
+                            </td>
+                            <td>
+                              <p>9.21 EUR</p>
+                            </td>
+                            <td></td>
+                            <td></td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
                   </div>
                   <div class="settings-services__footer"><span class="settings-services__footer-text">Have you learn to do new services?<br/> <a href="#" class="text-boston-blue">Contact<a/> the project manager to update your pricing & services list.</span></div>
                 </div>
