--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -1271,7 +1271,7 @@
           </div>
           <label class="edit-avatar-tool__placeholder">
             <div class="edit-avatar-tool__placeholder-wrap">
-              <input class="input input--hidden" type="file" accept="image/*">
+              <input class="input--hidden" type="file" accept="image/*">
               <h4 class="font-semibold text-alto">Upload a new image</h4>
             </div>
           </label>
@@ -1302,7 +1302,7 @@
             </button>
             <div class="button-group">
               <label class="button button--bg-alabaster button-group__button edit-avatar-tool__upload">
-                <input class="input input--hidden" type="file" accept="image/*"><span>Upload new</span><span class="button__icon">
+                <input class="input--hidden" type="file" accept="image/*"><span>Upload new</span><span class="button__icon">
                                       <svg class="svg-icon svg-icon--surfie-green" width="10" height="10">
                                         <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
                                       </svg></span>
