dropdown position change function was added

--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -137,10 +137,10 @@
         <div class="settings-page__catalog">
           <div class="catalog">
             <div class="catalog__tabs tabs js-tabs">
-              <div class="catalog__tab js-tabs-tab is-active" data-tab="general">
+              <div class="catalog__tab js-tabs-tab " data-tab="general">
                 <div class="catalog__tab-title">General</div>
               </div>
-              <div class="catalog__tab js-tabs-tab " data-tab="education">
+              <div class="catalog__tab js-tabs-tab is-active" data-tab="education">
                 <div class="catalog__tab-title">Education &amp; Files</div>
               </div>
               <div class="catalog__tab js-tabs-tab " data-tab="services">
@@ -151,7 +151,7 @@
               </div>
             </div>
             <div class="catalog__content">
-              <div class="catalog__content-item tabs__content js-tabs-content is-active" data-content="general">
+              <div class="catalog__content-item tabs__content js-tabs-content" data-content="general">
                 <div class="settings-general">
                   <div class="settings-general__row">
                     <div class="settings-general__avatar">
@@ -346,7 +346,7 @@
                   </div>
                 </div>
               </div>
-              <div class="catalog__content-item tabs__content js-tab-content" data-content="education">
+              <div class="catalog__content-item tabs__content js-tab-content is-active" data-content="education">
                 <div class="settings-education">
                   <div class="settings-education__row">
                     <div class="settings-education__col">
