margins were changed to px. Input animation was fixed

--- a/app/static/application-page-2.html
+++ b/app/static/application-page-2.html
@@ -106,13 +106,13 @@
                             <p><span/ class="h3 text-surfie-green">#1</span> Your diploma:</p>
                           </div>
                           <div class="row">
-                            <div class="col-12 col-md-6 mb-5 mb-md-0">
+                            <div class="col-12 col-md-6 mb-15 mb-md-0">
                               <input class="input input--bordered" type="text" placeholder="Diploma type (ex. bacaular)">
                             </div>
                             <div class="col-12 col-md-6">
                               <div class="input-animation js-input-animation">
-                                <label class="input-animation__label js-input-animation-label" for="category">Category:</label>
-                                <input class="input input--bordered js-input-animation-field undefined" type="text" value="Translator" id="category">
+                                <label class="input-animation__label" for="category">Category:</label>
+                                <input class="input input--bordered undefined" type="text" value="Translator" id="category">
                               </div>
                             </div>
                           </div>
@@ -247,8 +247,8 @@
                         <div class="form-group__header">
                           <h5>Please select your strongest fileds:</h5>
                         </div>
-                        <div class="row mb-4">
-                          <div class="col-12 col-xs-6 mb-3 mb-xs-0">
+                        <div class="row mb-15">
+                          <div class="col-12 col-xs-6 mb-10 mb-xs-0">
                             <div class="column-group column-group--sm">
                               <div class="column-group__item">
                                 <label class="checkbox">
@@ -316,8 +316,8 @@
                         <div class="row">
                           <div class="col-12 col-md-6">
                             <div class="input-animation js-input-animation">
-                              <label class="input-animation__label js-input-animation-label" for="custom">Custom:</label>
-                              <input class="input input--bordered js-input-animation-field undefined" type="text" id="custom">
+                              <label class="input-animation__label" for="custom">Custom:</label>
+                              <input class="input input--bordered undefined" type="text" id="custom">
                             </div>
                           </div>
                         </div>
