--- a/app/static/employer-application-page.html
+++ b/app/static/employer-application-page.html
@@ -49,44 +49,44 @@
               <div class="column-group column-group--md">
                 <div class="column-group__item">
                   <div class="input-animation js-input-animation input-animation--required">
-                    <label class="input-animation__label js-input-animation-label" for="name">Name, surname</label>
-                    <input class="input input--bordered js-input-animation-field undefined" type="text" id="name">
+                    <label class="input-animation__label" for="name">Name, surname</label>
+                    <input class="input input--bordered undefined" type="text" id="name">
                   </div>
                 </div>
                 <div class="column-group__item">
                   <div class="row-group row-group--flex-1">
                     <div class="row-group__item">
                       <div class="input-animation js-input-animation input-animation--required">
-                        <label class="input-animation__label js-input-animation-label" for="email">Email</label>
-                        <input class="input input--bordered js-input-animation-field undefined" type="email" id="email">
+                        <label class="input-animation__label" for="email">Email</label>
+                        <input class="input input--bordered undefined" type="email" id="email">
                       </div>
                     </div>
                     <div class="row-group__item">
                       <div class="input-animation js-input-animation input-animation--required">
-                        <label class="input-animation__label js-input-animation-label" for="phone">Phone number</label>
-                        <input class="input input--bordered js-input-animation-field undefined" type="email" id="phone">
+                        <label class="input-animation__label" for="phone">Phone number</label>
+                        <input class="input input--bordered undefined" type="email" id="phone">
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="column-group__item">
                   <div class="input-animation js-input-animation input-animation--required">
-                    <label class="input-animation__label js-input-animation-label" for="address">Address #1</label>
-                    <input class="input input--bordered js-input-animation-field undefined" type="text" id="address">
+                    <label class="input-animation__label" for="address">Address #1</label>
+                    <input class="input input--bordered undefined" type="text" id="address">
                   </div>
                 </div>
                 <div class="column-group__item">
                   <div class="row-group row-group--flex-1">
                     <div class="row-group__item">
                       <div class="input-animation js-input-animation input-animation--required">
-                        <label class="input-animation__label js-input-animation-label" for="zip">Zip code</label>
-                        <input class="input input--bordered js-input-animation-field undefined" type="text" id="zip">
+                        <label class="input-animation__label" for="zip">Zip code</label>
+                        <input class="input input--bordered undefined" type="text" id="zip">
                       </div>
                     </div>
                     <div class="row-group__item">
                       <div class="input-animation js-input-animation input-animation--required">
-                        <label class="input-animation__label js-input-animation-label" for="city">City</label>
-                        <input class="input input--bordered js-input-animation-field undefined" type="text" id="city">
+                        <label class="input-animation__label" for="city">City</label>
+                        <input class="input input--bordered undefined" type="text" id="city">
                       </div>
                     </div>
                   </div>
@@ -95,15 +95,15 @@
                   <div class="row-group row-group--flex-1">
                     <div class="row-group__item">
                       <div class="input-animation js-input-animation input-animation--required">
-                        <label class="input-animation__label js-input-animation-label" for="language">Your native language</label>
-                        <input class="input input--bordered js-input-animation-field undefined" type="text" id="language">
+                        <label class="input-animation__label" for="language">Your native language</label>
+                        <input class="input input--bordered undefined" type="text" id="language">
                       </div>
                     </div>
                     <div class="row-group__item">
                       <div class="datepicker">
                         <div class="input-animation js-input-animation input-animation--required">
-                          <label class="input-animation__label js-input-animation-label" for="birthday">Birthday</label>
-                          <input class="input input--bordered js-input-animation-field datepicker__input js-datepicker-input" type="text" id="birthday">
+                          <label class="input-animation__label" for="birthday">Birthday</label>
+                          <input class="input input--bordered datepicker__input js-datepicker-input" type="text" id="birthday">
                         </div>
                       </div>
                     </div>
@@ -111,8 +111,8 @@
                 </div>
                 <div class="column-group__item">
                   <div class="input-animation js-input-animation">
-                    <label class="input-animation__label js-input-animation-label" for="info">Additional info:</label>
-                    <input class="input input--bordered js-input-animation-field undefined" type="text" id="info">
+                    <label class="input-animation__label" for="info">Additional info:</label>
+                    <input class="input input--bordered undefined" type="text" id="info">
                   </div>
                 </div>
               </div>
