--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -43,16 +43,16 @@
               <div class="form__line">
                 <div class="form-group">
                   <div class="input-animation js-input-animation">
-                    <label class="input-animation__label js-input-animation-label" for="email">Email:</label>
-                    <input class="input input--bordered js-input-animation-field undefined" type="email" id="email" />
+                    <label class="input-animation__label" for="email">Email:</label>
+                    <input class="input input--bordered undefined" type="email" id="email" />
                   </div>
                 </div>
               </div>
               <div class="form__line">
                 <div class="form-group">
                   <div class="input-animation js-input-animation">
-                    <label class="input-animation__label js-input-animation-label" for="password">Password:</label>
-                    <input class="input input--bordered js-input-animation-field undefined" type="password" id="password" />
+                    <label class="input-animation__label" for="password">Password:</label>
+                    <input class="input input--bordered undefined" type="password" id="password" />
                   </div>
                 </div>
               </div>
