--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -1201,14 +1201,14 @@
           <form class="form">
             <div class="form__line">
               <div class="input-animation js-input-animation input-animation--required">
-                <label class="input-animation__label js-input-animation-label" for="oldPassword">Old password </label>
-                <input class="input input--bordered js-input-animation-field undefined" type="password" id="oldPassword">
+                <label class="input-animation__label" for="oldPassword">Old password </label>
+                <input class="input input--bordered undefined" type="password" id="oldPassword">
               </div>
             </div>
             <div class="form__line">
               <div class="input-animation js-input-animation input-animation--required">
-                <label class="input-animation__label js-input-animation-label" for="newPassword">Email</label>
-                <input class="input input--bordered js-input-animation-field undefined" type="password" id="newPassword">
+                <label class="input-animation__label" for="newPassword">Email</label>
+                <input class="input input--bordered undefined" type="password" id="newPassword">
               </div>
             </div>
             <div class="form__line">
