--- a/app/static/application-page-1.html
+++ b/app/static/application-page-1.html
@@ -122,13 +122,13 @@
                   </div>
                   <div class="application-form__card-line">
                     <div class="row">
-                      <div class="col-12 col-md-6 col-lg-7 mb-6 mb-md-0">
+                      <div class="col-12 col-md-6 col-lg-7 mb-25 mb-md-0">
                         <div class="form-group">
                           <div class="form-group__header">
                             <p>What combinations do you translate?</p>
                           </div>
                           <div class="row">
-                            <div class="col-12 col-lg-6 mb-4 mb-lg-0">
+                            <div class="col-12 col-lg-6 mb-15 mb-lg-0">
                               <div class="input-group">
                                 <div class="input-group__prepend">
                                   <p>From</p>
@@ -279,10 +279,10 @@
                       <div class="form-group__header">
                         <p>What languages do you proofread?</p>
                       </div>
-                      <div class="column-group column-group--sm">
+                      <div class="column-group column-group--md">
                         <div class="column-group__item">
                           <div class="row">
-                            <div class="col-12 col-md-4 mb-3 mb-md-0">
+                            <div class="col-12 col-md-4 mb-10 mb-md-0">
                               <div class="select js-select">
                                 <button class="select__label js-select-label" data-selected="lt" type="button"><span>Lithianian</span>
                                 </button>
@@ -331,7 +331,7 @@
                         </div>
                         <div class="column-group__item">
                           <div class="row">
-                            <div class="col-12 col-md-4 mb-3 mb-md-0">
+                            <div class="col-12 col-md-4 mb-10 mb-md-0">
                               <div class="select js-select">
                                 <button class="select__label js-select-label" data-selected="lt" type="button"><span>Lithianian</span>
                                 </button>
@@ -444,7 +444,7 @@
                   </div>
                   <div class="application-form__card-line">
                     <div class="row">
-                      <div class="col-12 col-md-6 mb-6 mb-md-0">
+                      <div class="col-12 col-md-6 mb-25 mb-md-0">
                         <div class="form-group">
                           <div class="form-group__header">
                             <p>What combinations do you translate?</p>
@@ -544,7 +544,7 @@
                 <div data-radio-toggle-content="interpreting">
                   <div class="application-form__card-line">
                     <div class="row">
-                      <div class="col-12 col-md-6 col-lg-7 mb-6 mb-md-0">
+                      <div class="col-12 col-md-6 col-lg-7 mb-25 mb-md-0">
                         <div class="form-group">
                           <div class="form-group__header">
                             <label class="checkbox">
@@ -554,7 +554,7 @@
                             </label>
                           </div>
                           <div class="row">
-                            <div class="col-12 col-lg-6 mb-4 mb-lg-0">
+                            <div class="col-12 col-lg-6 mb-15 mb-lg-0">
                               <div class="input-group">
                                 <div class="input-group__prepend">
                                   <p>From</p>
@@ -648,7 +648,7 @@
                   </div>
                   <div class="application-form__card-line">
                     <div class="row">
-                      <div class="col-12 col-md-6 col-lg-7 mb-6 mb-md-0">
+                      <div class="col-12 col-md-6 col-lg-7 mb-25 mb-md-0">
                         <div class="form-group">
                           <div class="form-group__header">
                             <label class="checkbox">
@@ -658,7 +658,7 @@
                             </label>
                           </div>
                           <div class="row">
-                            <div class="col-12 col-lg-6 mb-4 mb-lg-0">
+                            <div class="col-12 col-lg-6 mb-15 mb-lg-0">
                               <div class="input-group">
                                 <div class="input-group__prepend">
                                   <p>From</p>
@@ -781,7 +781,7 @@
                 <div data-radio-toggle-content="writing">
                   <div class="application-form__card-line">
                     <div class="row">
-                      <div class="col-12 col-md-6 mb-6 mb-md-0">
+                      <div class="col-12 col-md-6 mb-25 mb-md-0">
                         <div class="form-group">
                           <div class="form-group__header">
                             <p>What combinations do you translate?</p>
@@ -881,7 +881,7 @@
                 <div data-radio-toggle-content="transcribing">
                   <div class="application-form__card-line">
                     <div class="row">
-                      <div class="col-12 col-md-6 mb-6 mb-md-0">
+                      <div class="col-12 col-md-6 mb-25 mb-md-0">
                         <div class="form-group">
                           <div class="form-group__header">
                             <p>What languages do you write?</p>
