settings page tabs were rewrited with using the grid

--- a/app/static/application-page-2.html
+++ b/app/static/application-page-2.html
@@ -112,7 +112,7 @@
                             <div class="col-12 col-md-6">
                               <div class="input-animation js-input-animation">
                                 <label class="input-animation__label" for="category">Category:</label>
-                                <input class="input input--bordered undefined" type="text" value="Translator" id="category">
+                                <input class="input input--bordered" type="text" value="Translator" id="category">
                               </div>
                             </div>
                           </div>
@@ -317,7 +317,7 @@
                           <div class="col-12 col-md-6">
                             <div class="input-animation js-input-animation">
                               <label class="input-animation__label" for="custom">Custom:</label>
-                              <input class="input input--bordered undefined" type="text" id="custom">
+                              <input class="input input--bordered" type="text" id="custom">
                             </div>
                           </div>
                         </div>
