--- a/app/static/employer-application-page.html
+++ b/app/static/employer-application-page.html
@@ -50,7 +50,7 @@
                 <div class="column-group__item">
                   <div class="input-animation js-input-animation input-animation--required">
                     <label class="input-animation__label" for="name">Name, surname</label>
-                    <input class="input input--bordered undefined" type="text" id="name">
+                    <input class="input input--bordered" type="text" id="name">
                   </div>
                 </div>
                 <div class="column-group__item">
@@ -58,13 +58,13 @@
                     <div class="row-group__item">
                       <div class="input-animation js-input-animation input-animation--required">
                         <label class="input-animation__label" for="email">Email</label>
-                        <input class="input input--bordered undefined" type="email" id="email">
+                        <input class="input input--bordered" type="email" id="email">
                       </div>
                     </div>
                     <div class="row-group__item">
                       <div class="input-animation js-input-animation input-animation--required">
                         <label class="input-animation__label" for="phone">Phone number</label>
-                        <input class="input input--bordered undefined" type="email" id="phone">
+                        <input class="input input--bordered" type="email" id="phone">
                       </div>
                     </div>
                   </div>
@@ -72,7 +72,7 @@
                 <div class="column-group__item">
                   <div class="input-animation js-input-animation input-animation--required">
                     <label class="input-animation__label" for="address">Address #1</label>
-                    <input class="input input--bordered undefined" type="text" id="address">
+                    <input class="input input--bordered" type="text" id="address">
                   </div>
                 </div>
                 <div class="column-group__item">
@@ -80,13 +80,13 @@
                     <div class="row-group__item">
                       <div class="input-animation js-input-animation input-animation--required">
                         <label class="input-animation__label" for="zip">Zip code</label>
-                        <input class="input input--bordered undefined" type="text" id="zip">
+                        <input class="input input--bordered" type="text" id="zip">
                       </div>
                     </div>
                     <div class="row-group__item">
                       <div class="input-animation js-input-animation input-animation--required">
                         <label class="input-animation__label" for="city">City</label>
-                        <input class="input input--bordered undefined" type="text" id="city">
+                        <input class="input input--bordered" type="text" id="city">
                       </div>
                     </div>
                   </div>
@@ -96,7 +96,7 @@
                     <div class="row-group__item">
                       <div class="input-animation js-input-animation input-animation--required">
                         <label class="input-animation__label" for="language">Your native language</label>
-                        <input class="input input--bordered undefined" type="text" id="language">
+                        <input class="input input--bordered" type="text" id="language">
                       </div>
                     </div>
                     <div class="row-group__item">
@@ -112,7 +112,7 @@
                 <div class="column-group__item">
                   <div class="input-animation js-input-animation">
                     <label class="input-animation__label" for="info">Additional info:</label>
-                    <input class="input input--bordered undefined" type="text" id="info">
+                    <input class="input input--bordered" type="text" id="info">
                   </div>
                 </div>
               </div>
