--- a/app/static/login-page.html
+++ b/app/static/login-page.html
@@ -44,7 +44,7 @@
                 <div class="form-group">
                   <div class="input-animation js-input-animation">
                     <label class="input-animation__label" for="email">Email:</label>
-                    <input class="input input--bordered undefined" type="email" id="email" />
+                    <input class="input input--bordered" type="email" id="email" />
                   </div>
                 </div>
               </div>
@@ -52,7 +52,7 @@
                 <div class="form-group">
                   <div class="input-animation js-input-animation">
                     <label class="input-animation__label" for="password">Password:</label>
-                    <input class="input input--bordered undefined" type="password" id="password" />
+                    <input class="input input--bordered" type="password" id="password" />
                   </div>
                 </div>
               </div>
